fix: improve responsive layout alignment for small screens

--- a/style.css
+++ b/style.css
@@ -297,27 +297,51 @@ body.dark-mode .suggestions-list li:hover {
 }
 
 /* 📱 RESPONSIVE */
+
+@media(max-width:1024px){
+  body{
+    margin-top: 1%;
+  }
+  .top-bar{
+    padding:8px 16px; 
+    border-radius: 12px;
+    box-shadow: 1px 1px 6px 2px rgb(65, 83, 103);
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 12px;
+    margin-top: 0;
+  }
+  #theme-toggle{
+    margin: auto;
+    max-width: 120px;
+    position: sticky;
+  }
+}
+
 @media (max-width: 600px) {
   body {
-    margin-top: 40px;
-    padding: 0 15px;
+    margin-top: 1%;
   }
 
   .search-box {
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    gap:12px;
     align-items: center;
+    max-width: 400px;
   }
 
-  .search-box input,
-  .search-box button {
+  .search-box input{
     width: 100%;
+    margin: 5px 0;
+  }
+  .search-box button{
     margin: 5px 0;
   }
 
   #unit-toggle {
-    width: auto;
-    display: inline-block;
+    display: flex;
+    margin: 0 auto;
   }
 
   #temp {
@@ -336,5 +360,29 @@ body.dark-mode .suggestions-list li:hover {
 
   .suggestions-list {
     width: 100%;
+  }
+  .top-bar{
+    display: block;
+  }
+}
+@media(max-width:420px){
+  .search-box{
+    padding: 8px 16px;
+    flex-wrap: wrap;
+  }
+  .search-box input{
+    margin: 0 auto;
+    max-width: 205px;
+  }
+  #geo-btn{
+    margin: 0 auto;
+  }
+}
+@media(max-width:365px){
+  .search-box button{
+    margin: 0 auto;
+  }
+  .top-bar h1{
+    font-size: 1.7rem;
   }
 }
